--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DJANGO_SECRET_KEY=nOD_fjXIDw7r_fL9DEaxrJ12n5i8teqPckapDKaFKgcdZrQ3WgVxJVxdFvtNMojMN18
 DJANGO_DEBUG=False
-DJANGO_ALLOWED_HOSTS=tools.newreboot.online
+DJANGO_ALLOWED_HOSTS=tools.newreboot.online,159.203.45.32,localhost,127.0.0.1
