--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 # Django Configuration
-DJANGO_SECRET_KEY=nOD_fjXIDw7r_fL9DEaxrJ12n5i8teqPckapDKaFKgcdZrQ3WgVxJVxdFvtNMojMN18
+# IMPORTANTE: Cambiar SECRET_KEY en producción
+DJANGO_SECRET_KEY=nOD_fj&IDw7r_fL9DEabrJ12n8i8teqPckapDKaFKgcdZrQ3WgVxJ3xdFvtNM5jMN18
+
+# IMPORTANTE: Cambiar a False en producción
 DJANGO_DEBUG=False
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+
+# IMPORTANTE: Configurar con el dominio real en producción
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,tu-dominio.com
