--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "gunicorn app_main.wsgi:application --bind 0.0.0.0:$PORT"
+startCommand = "gunicorn app_main.wsgi:application --bind 0.0.0.0:${PORT:-8000}"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
