actualizacion de dominio

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DJANGO_SECRET_KEY=nOD_fj&IDw7r_fL9DEabrJ12n8i8teqPckapDKaFKgcdZrQ3WgVxJ3xdFvtNM5
 DJANGO_DEBUG=False
 
 # IMPORTANTE: Configurar con el dominio real en producción
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,tu-dominio.com
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,tu-dominio.com, docker-django-production.up.railway.app
