--- a/railway.toml
+++ b/railway.toml
@@ -10,7 +10,7 @@ restartPolicyMaxRetries = 10
 PORT = { default = "8000" }
 DJANGO_SETTINGS_MODULE = { default = "app_main.settings" }
 DEBUG = { default = "False" }
-ALLOWED_HOSTS = { default = "*" }
+ALLOWED_HOSTS = { default = "localhost,127.0.0.1,conversor-docs.up.railway.app,*.railway.app,*.up.railway.app" }
 SECRET_KEY = { default = "your-secret-key-here" }
 
 [healthcheck]
