implementacion de orc

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,11 @@ gunicorn==21.2.0
 
 # Archivos estáticos
 whitenoise==6.5.0
+
+# OCR y procesamiento de imágenes
+pytesseract==0.3.10
+python-docx==0.8.11
+Pillow==10.0.0
+opencv-python-headless==4.12.0.88
+numpy==2.2.6
+reportlab==4.0.4
