--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Pillow==10.0.0
 opencv-python-headless==4.12.0.88
 numpy==2.2.6
 reportlab==4.0.4
+imutils==0.5.4
 
 # Dependencias del sistema para Tesseract OCR
 # Nota: En Railway, Tesseract debe estar instalado en el sistema
