--- a/railway.toml
+++ b/railway.toml
@@ -12,7 +12,7 @@ DJANGO_SETTINGS_MODULE = { default = "app_main.settings" }
 DEBUG = { default = "False" }
 ALLOWED_HOSTS = { default = "localhost,127.0.0.1,conversor-docs.up.railway.app,*.railway.app,*.up.railway.app" }
 SECRET_KEY = { default = "your-secret-key-here" }
-# Optimizaciones para OCR
+# Optimizaciones de Python
 PYTHONUNBUFFERED = { default = "1" }
 PYTHONDONTWRITEBYTECODE = { default = "1" }
 
@@ -27,5 +27,5 @@ minReplicas = 1
 maxReplicas = 2
 
 [resources]
-memory = "2Gi"
-cpu = "2000m"
+memory = "512Mi"
+cpu = "1000m"
